--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^10.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
